# polaris

./: .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  README_EN.md  README_zh.md  SECURITY.md  bare_infer_lint_output.txt  fix_test_schema.py  go.mod  go.sum  patch_infer.py
.github/workflows/: benchmark.yml  ci.yml  constitutional-review.yml  release.yml  rust-build.yml
api/proto/: blackboard.proto  event.proto  mutation.proto
cmd/gen_bare_error_baseline/: main.go
cmd/polaris/: adapters_agent.go  adapters_eval.go  adapters_mcp_async.go  adapters_memory.go  adapters_misc.go  adapters_security.go  adapters_surreal.go  benchmark.go  boot_agent.go  boot_agent_founding_anchor_test.go  boot_agent_test.go  boot_crash_recovery.go  boot_crash_recovery_test.go  boot_events.go  boot_events_test.go  boot_immune.go  boot_knowledge.go  boot_memory.go  boot_server.go  boot_server_test.go  boot_substrate.go  boot_tools.go  cli.go  cli_allowlist.go  cli_eval.go  cli_eval_bench.go  cli_fanout.go  cli_i18n.go  cli_skill.go  cli_vault.go  main.go  migrate_openclaw.go  migrate_openclaw_memory.go  pipeline_adapters.go  process_staging.go  registrar_test.go  runtime_registrar.go  server_provider_loader.go  server_provider_loader_test.go  server_stt_tts.go  (+2 more)
configs/: defaults.toml  embed.go  loader.go  marketplaces.yaml  registry.yaml
configs/extensions/: automation_sources.yaml  marketplaces.yaml  registry.yaml  trusted-publishers.yaml
configs/policy/: memory.cedar  soft_constraints.cedar
configs/prompts/: identity.md  system_prompt.md
configs/threshold-examples/: m10_knowledge.toml  m11_policy.toml  m12_eval.toml  m13_interface.toml  m1_router.toml  m2_storage.toml  m3_observability.toml  m4_kernel.toml  m5_memory.toml  m6_skill.toml  m7_tool.toml  m8_orchestrator.toml  m9_self_improve.toml
docs/: ESCALATE.md  KILLSWITCH.md
docs/arch/: 00-Global-Dictionary.md  ARCHITECTURE.md  DIAGRAMS.md  INDEX.md  M01-Inference-Runtime.md  M02-Storage-Fabric.md  M03-Observability.md  M04-Agent-Kernel.md  M05-Memory-System.md  M06-Skill-Library.md  M07-Tool-Action-Layer.md  M08-Multi-Agent-Orchestrator.md  M09-Self-Improvement-Engine.md  M10-Knowledge-RAG.md  M11-Policy-Safety.md  M12-Eval-Harness.md  M13-Interface-Scheduler.md  M13-bis-Extension-Registry.md  Module-Dependency-Axioms.md  ROADMAP.md  internal-layout-review.md
docs/hooks-examples/: README.md  gateway.startup.example  message.after.example  message.before.example
docs/specs/: 00-Constitution.md  01-Go-Code.md  02-Rust-FFI.md  03-Agent-Pattern.md  04-Module-Boundary.md  05-Coding-Workflow.md  06-Review.md  07-Reference-Implementation.md  08-Doc-Hygiene.md  08-HITL-AskUser.md  09-Generative-UI.md  09-LLM-Agent-Production.md  CHANGELOG.md  INDEX.md
docs/upgrade/: GEMINI_PATCH_ROUND2.md  GEMINI_PATCH_ROUND6.md  GEMINI_UPGRADE_SPEC.md
internal/action/: CLAUDE.md  capability_token.go  capability_token_test.go  facade.go  inv_test.go  provider.go  taint_preserving_decoder.go  taint_preserving_decoder_test.go  tool_usage_policy.go  tool_usage_policy_test.go
internal/agent/: CLAUDE.md  agent.go  agent_context_compaction.go  agent_context_compaction_test.go  agent_execute.go  agent_execute_dag.go  agent_execute_dag_test.go  agent_execute_effect.go  agent_execute_effect_helpers.go  agent_execute_effect_test.go  (+27 more)
rust/substrate/: Cargo.toml  deny.toml
rust/substrate/src/: check_wasi.rs  lib.rs  native_sandbox.rs  surreal_mem.rs  surreal_store.rs  surreal_tier1.rs  wasmtime_engine.rs
rust/substrate/src/llama_infer/: dispatch.rs  mod.rs
rust/substrate/src/native_sandbox/: bwrap.rs  dispatch.rs  engine.rs  env.rs  fallback.rs  mod.rs  seatbelt.rs  types.rs
rust/substrate/src/surreal_store/: fts.rs  graph.rs  kv.rs  mod.rs  store.rs  vector.rs
scripts/: README.md  ci_test.sh  constitutional_review.sh  deadcode-allowlist.txt  install.ps1  install.sh  restart.sh  uninstall.ps1  uninstall.sh  xr06-allowlist.txt
tools/: gen_threshold_examples.go  generate_manifest.go  sync_doc_toc.go
web/: package-lock.json  package.json  vite-plugin-fragments.js  vite.config.js
(+1873 files in other folders)
