[package]
name = "substrate"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Polaris — Rust performance-critical path (FFI/sidecar)"

[features]
default = []

[dependencies]
# Embedding computation (SIMD)
bytemuck = "1"
# Zero-copy serialization for Go<->Rust vector transfer
capnp = "0.25.5"
cedar-policy = "4.11.1"
surrealdb = { version = "3", features = ["kv-mem", "kv-rocksdb"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
wasmtime = { version = "45.0.1", features = ["component-model"] }
wasmtime-wasi = "45.0.1"
once_cell = "1.19"
anyhow = "1.0.102"
bytes = "1.11.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lib]
crate-type = ["staticlib", "cdylib"]

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Enable Link Time Optimization
codegen-units = 1 # Maximize size optimization across the crate
strip = true     # Strip symbols from binary
